// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. video label with a title 1`] = `
<Component>
  <Component>
    <IconVideo
      fillColour="#008347"
      height={8}
    />
  </Component>
  <Text>
    SWIMMING
  </Text>
</Component>
`;

exports[`2. video label without a title shows video 1`] = `
<Component>
  <Component>
    <IconVideo
      fillColour="#008347"
      height={8}
    />
  </Component>
  <Text>
    VIDEO
  </Text>
</Component>
`;

exports[`3. video label with the black default colour 1`] = `
<Component>
  <Component>
    <IconVideo
      fillColour="black"
      height={8}
    />
  </Component>
  <Text>
    VIDEO
  </Text>
</Component>
`;
